[workspace]
resolver = "2"
members = [
    "cortex-ai",
    "cortex-sample",
    "cortex-sources",
    "cortex-processors"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["canavar <abdulkadiryaman@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/intelliseek/cortex"
documentation = "https://docs.rs/cortex"

[profile.coverage]
inherits = "test"
debug = true
