[package]
name = "cortex-sample"
version = "0.1.0"
edition = "2021"
description = "Sample project demonstrating cortex-flow usage"
license = "MIT"

[dependencies]
cortex-ai = { path = "../cortex-ai" }
cortex-sources = { path = "../cortex-sources" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
flume = "0.11"
